# PhotoBatch

./: .gitignore  CMakeLists.txt  PhotoBatch.cpp  README.md  helpmessage.txt
src/: ArgumentParser.cpp  ArgumentParser.h  Image.cpp  Image.h  Mode.cpp  Mode.h  PhotoBatch.cpp  PhotoBatch.h  RenameMode.cpp  RenameMode.h  utils.cpp  utils.h  vector.cpp
src/Modes/: ConvertMode.cpp  ConvertMode.h  Mode.cpp  Mode.h  ModesFactory.cpp  ModesFactory.h  RenameMode.cpp  RenameMode.h  ResizeMode.cpp  ResizeMode.h  ScaleMode.cpp  ScaleMode.h
tests/: CMakeCache.txt  CMakeLists.txt  Makefile  TestArgumentParser.cpp  cmake_install.cmake
